Make all tag helper properties nullable
Closes #316

--- a/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/NotificationBanner/NotificationBannerSuccess.cshtml
+++ b/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/NotificationBanner/NotificationBannerSuccess.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-<govuk-notification-banner type="Success">
+<govuk-notification-banner type="NotificationBannerType.Success">
     <p class="govuk-notification-banner__heading">
         Training outcome recorded and trainee withdrawn
     </p>
