--- a/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/Pagination/Pagination.cshtml
+++ b/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/Pagination/Pagination.cshtml
@@ -3,7 +3,7 @@
 <govuk-pagination>
     <govuk-pagination-previous href="#" />
     <govuk-pagination-item href="#">1</govuk-pagination-item>
-    <govuk-pagination-item href="#" is-current="true">2</govuk-pagination-item>
+    <govuk-pagination-item href="#" current="true">2</govuk-pagination-item>
     <govuk-pagination-item href="#">3</govuk-pagination-item>
     <govuk-pagination-next href="#" />
 </govuk-pagination>
