--- a/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/Pagination/WithEllipsis.cshtml
+++ b/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/Pagination/WithEllipsis.cshtml
@@ -5,7 +5,7 @@
     <govuk-pagination-item href="#">1</govuk-pagination-item>
     <govuk-pagination-ellipsis />
     <govuk-pagination-item href="#">6</govuk-pagination-item>
-    <govuk-pagination-item href="#" is-current="true">7</govuk-pagination-item>
+    <govuk-pagination-item href="#" current="true">7</govuk-pagination-item>
     <govuk-pagination-item href="#">8</govuk-pagination-item>
     <govuk-pagination-ellipsis />
     <govuk-pagination-item href="#">42</govuk-pagination-item>
