Add error summary to main by default
Remove ability to use prepend-error-summary on any element;
it's no longer required.

--- a/src/GovUk.Frontend.AspNetCore/Views/Shared/_GovUkPageTemplate.cshtml
+++ b/src/GovUk.Frontend.AspNetCore/Views/Shared/_GovUkPageTemplate.cshtml
@@ -70,8 +70,8 @@
 
     <div class="govuk-width-container @ViewBag.ContainerClasses">
         @RenderSection("BeforeContent", required: false)
-        <main class="govuk-main-wrapper @ViewBag.MainClasses" id="main-content" role="main" lang="@ViewBag.MainLang">
-            @if (ViewBag.PrependErrorSummaryToMain is true or null && !Context.GetContainerErrorContext().ErrorSummaryHasBeenRendered)
+        <main class="govuk-main-wrapper @ViewBag.MainClasses" id="main-content" role="main" lang="@ViewBag.MainLang" prepend-error-summary="false">
+            @if (!Context.GetContainerErrorContext().ErrorSummaryHasBeenRendered)
             {
                 <govuk-error-summary/>
             }
